# search

./: Cargo.toml  LICENSE  README.md  build.rs  todo.txt
src/: app.rs  args.rs  clipboard.rs  editor.rs  help.rs  hotkeys.rs  main.rs  search.rs  settings.rs  stb_image.rs  support.rs
src/sys/: mod.rs
src/sys/dummy/: mod.rs  shell.rs
src/sys/unix/: args.rs
src/sys/windows/: args.rs  drag_drop.rs  mod.rs  shell.rs
