[package]
name = "search"
version = "0.5.0"
edition = "2021"
homepage = "https://github.com/reduf/search"
repository = "https://github.com/reduf/search"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true
codegen-units = 1
panic = "abort"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.1.8", features = ["derive"] }
cfg-if = "1.0.0"
arboard = { version = "3.2.0", default-features = false }
glium = { version = "0.32.1", default-features = true }
grep = "0.2"
ignore = "0.4"
image = "0.24"
imgui = { version = "0.9.0", features = ["tables-api"] }
imgui-glium-renderer = "0.9.0"
imgui-winit-support = "0.9.0"
indoc = "1.0"
regex = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
