[package]
name = "search"
version = "0.6.0"
edition = "2021"
homepage = "https://github.com/reduf/search"
repository = "https://github.com/reduf/search"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true
codegen-units = 1
panic = "abort"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.1.8", features = ["derive"] }
cfg-if = "1.0.0"
copypasta = "0.8.2"
glium = { version = "0.32.1", default-features = true }
grep = "0.2"
ignore = "0.4"
image = "0.24"
imgui = { version = "0.10.0", features = ["tables-api"] }
imgui-glium-renderer = "0.10.0"
imgui-winit-support = "0.10.0"
indoc = "1.0"
regex = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rfd = "0.11.3"

[target.'cfg(windows)'.dependencies.windows]
version = "0.43.0"
features = [
    "implement",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Ole",
    "Win32_System_Memory",
    "Win32_System_SystemServices",
    "Win32_UI_Shell",
]
