[package]
name = "search"
version = "0.9.0"
edition = "2021"
homepage = "https://github.com/reduf/search"
repository = "https://github.com/reduf/search"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true
codegen-units = 1
panic = "abort"

[profile.release-with-debug]
inherits = "release"
debug = true

[features]
console = []

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[build-dependencies]
cc = "1"

[dependencies]
glium = { version = "0.34", default-features = false, features = ["glutin_backend"] }
imgui-winit-support = "0.12"
glutin = "0.31"
glutin-winit = "0.4"
winit = { version = "0.29", features = ["rwh_05"] }
raw-window-handle = "0.5"

anyhow = "1"
clap = { version = "4.1", features = ["derive"] }
cfg-if = "1"
copypasta = "0.8"
grep = "0.2"
ignore = "0.4"
imgui = { version = "0.12", features = ["tables-api"] }
imgui-glium-renderer = "0.12"
indoc = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = { version = "0.12", default-features = false, features = ["gtk3"] }

[target.'cfg(windows)'.dependencies.windows]
version = "0.44.0"
features = [
    "implement",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Ole",
    "Win32_System_Memory",
    "Win32_System_SystemServices",
    "Win32_UI_Shell",
]
